--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarUnidadeFederada.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarUnidadeFederada.xaml
@@ -4,22 +4,70 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculoPrecoVenda.View"
+        xmlns:nf="clr-namespace:CalculoPrecoVenda"
         mc:Ignorable="d"
         Title="Localizar UF" Height="350" Width="800"
         WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <nf:NumberFormatter x:Key="myNumberFormatter"/>
+        <Style x:Key="CellRightAlign">
+            <Setter Property="Control.HorizontalAlignment" Value="Right"/>
+        </Style>
+    </Window.Resources>
+
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Padding="2"/>
-        <Button Grid.Row="0" Grid.Column="1" Content="Pesquisar" Padding="2" Width="65" Margin="5,0,0,0"/>
+        <TextBox Grid.Row="0" Grid.Column="0" Name="txtPesquisar" VerticalAlignment="Center" Padding="2"/>
+        <Button Grid.Row="0" Grid.Column="1" Name="btnPesquisar" Content="Pesquisar" Padding="2" Width="65" Margin="5,0,0,0" Click="btnPesquisar_Click" />
+        <DataGrid Grid.Row="1" Grid.ColumnSpan="3"
+                  AutoGenerateColumns="False"
+                  HeadersVisibility="Column"
+                  SelectionMode="Single"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  IsReadOnly="True"
+                  AlternationCount="2"
+                  RowBackground="Aqua"
+                  AlternatingRowBackground="White"
+                  Name="dtgUf">
 
-        <ListBox Name="listUf" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0"/>
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding UfId}" Width="50" Header="Cod" />
+                <DataGridTextColumn Binding="{Binding SiglaUf}" Width="50" Header="UF" />
+                <DataGridTextColumn Binding="{Binding NomeUf}" Width="400" Header="Nome UF " />
+                <DataGridTextColumn Binding="{Binding AliquotaInterna, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
+                                    Width="80" Header="Al. ICMS" CellStyle="{StaticResource CellRightAlign}"/>
+                <DataGridTextColumn Binding="{Binding AliquotaFcp, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
+                                    Width="80" Header="Al. FCP" CellStyle="{StaticResource CellRightAlign}"/>
+                <DataGridTextColumn Binding="{Binding ItensFcp}" Width="120" Header="Itens FCP" />
+                                    
+            </DataGrid.Columns>
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+            <DataGrid.CellStyle>
+                <Style x:Name="Cell" TargetType="{x:Type DataGridCell}">
+                    <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.CellStyle>
+
+        </DataGrid>
+        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Width="120" Height="35" VerticalAlignment="Top" Margin="20,20,10,0" Click="btnOK_Click"
+                Name="btnSelecionar" Content="Selecionar"/>
     </Grid>
 </Window>
