--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmUnidadeFederada.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmUnidadeFederada.xaml
@@ -17,43 +17,54 @@
 
     <StackPanel Margin="10" >
         <GroupBox Name="gpbCadastroUF" Header="UF" Height="380" Width="750" >
-        <Grid Name="grdCadastroUF">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="150"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+            <Grid Name="grdCadastroUF">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="190"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="Código :"  VerticalAlignment="Center" Margin="0,5"/>
-            <Label Grid.Row="1" Grid.Column="0" Content="Sigla :"  VerticalAlignment="Center" Margin="0,5"/>
-            <Label Grid.Row="2" Grid.Column="0" Content="Nome da UF :"  VerticalAlignment="Center" Margin="0,5"/>
-            <Label Grid.Row="3" Grid.Column="0" Content="Al. ICMS Interna :"  VerticalAlignment="Center" Margin="0,5"/>
-            <Label Grid.Row="4" Grid.Column="0" Content="Al. FCP :"  VerticalAlignment="Center" Margin="0,5"/>
-            <Label Grid.Row="5" Grid.Column="0" Content="Itens da FCP :"  VerticalAlignment="Top" Margin="0,5"/>
-            <Label Grid.Row="3" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="10,5"/>
-            <Label Grid.Row="4" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="10,5"/>
+                <Label Grid.Row="0" Grid.Column="0" Content="Código :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="1" Grid.Column="0" Content="Sigla :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="2" Grid.Column="0" Content="Nome da UF :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="3" Grid.Column="0" Content="Al. ICMS Interna :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="3" Grid.Column="3" Content="Al. ICMS Interesdual :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="3" Grid.Column="7" Content="Al. FCP :"  VerticalAlignment="Center" Margin="0,5"/>
+                <Label Grid.Row="5" Grid.Column="0" Content="Itens da FCP :"  VerticalAlignment="Top" Margin="0,5"/>
+                <Label Grid.Row="3" Grid.Column="2" Content="%" VerticalAlignment="Center" Margin="5,0,15,0"/>
+                <Label Grid.Row="3" Grid.Column="5" Content="%" VerticalAlignment="Center" Margin="5,0,15,0"/>
+                <Label Grid.Row="3" Grid.Column="9" Content="%" VerticalAlignment="Center" Margin="5,0,15,0"/>
 
-                <TextBox Grid.Row="0" Grid.Column="1" Name="txtUfId" Width="100" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" Grid.ColumnSpan="2"
+
+                <TextBox Grid.Row="0" Grid.Column="1" Name="txtUfId" Width="100" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" Grid.ColumnSpan="9"
                      Text="{Binding UfId, Mode=OneWay}" IsEnabled="False" TextAlignment="Center"/>
-            <TextBox Grid.Row="1" Grid.Column="1" Name="txtSiglaUf" Width="100" VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="10,7,0,6" Grid.ColumnSpan="2"
+                <TextBox Grid.Row="1" Grid.Column="1" Name="txtSiglaUf" Width="100" VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="10,7,0,6" Grid.ColumnSpan="9"
                      Text="{Binding SiglaUf}" TextAlignment="Center" MaxLength="2" PreviewTextInput="LetterValidationTextBox"/>
-            <TextBox Grid.Row="2" Grid.Column="1" Name="txtNomeUf" Width="300" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" Grid.ColumnSpan="2"
+                <TextBox Grid.Row="2" Grid.Column="1" Name="txtNomeUf" Width="300" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" Grid.ColumnSpan="9"
                      Text="{Binding NomeUf}" TextAlignment="Left"/>
-            <TextBox Grid.Row="3" Grid.Column="1" Name="txtAlIcmsInterna" Width="50" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,7,0,6" 
+                <TextBox Grid.Row="3" Grid.Column="1" Name="txtAlIcmsInterna" Width="50" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,7,0,6" 
                      Text="{Binding AliquotaInterna, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
-            <TextBox Grid.Row="4" Grid.Column="1" Name="txtAlFcp" Width="50"  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" 
+                <TextBox Grid.Row="3" Grid.Column="4" Name="txtAlIcmsInterestadual" Width="50" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,7,0,6" 
+                     Text="{Binding AliquotaInterestadual, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
+                <TextBox Grid.Row="3" Grid.Column="8" Name="txtAlFcp" Width="50"  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,6,0,7" 
                      Text="{Binding AliquotaFcp, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" TextAlignment="Center"/>
-            <TextBox Grid.Row="5" Grid.Column="1" Name="txtItensFcp" Height="130" VerticalAlignment="Top" Margin="10,0" Grid.ColumnSpan="2"
+                <TextBox Grid.Row="5" Grid.Column="1" Name="txtItensFcp" Height="170" VerticalAlignment="Top" Margin="10,0" Grid.ColumnSpan="9"
                      Text="{Binding ItensFcp}" TextAlignment="Left" AcceptsReturn="True" TextWrapping="Wrap"/>
-        </Grid>
+            </Grid>
         </GroupBox>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Name="btnNovo" Content="Novo" Width="100" Height="35" VerticalAlignment="Top" Margin="10,10,10,0" Click="btnNovo_Click" />
