--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
@@ -13,6 +13,9 @@
         <local:MultiplyConverter x:Key="MyMultiplyConverter"/>
         <local:SumConverter x:Key="mySumConverter"/>
         <local:MinusConverter x:Key="myMinusConverter"/>
+        <local:PisConverter x:Key="myPisConverter"/>
+        <local:CofinsConverter x:Key="myCofinsConverter"/>
+        <local:IcmsConverter x:Key="myIcmsConverter"/>
 
     </Window.Resources>
 
@@ -23,10 +26,8 @@
 
             <GroupBox Name="grpFornecedor" Header="Fornecedor" Height="240" Width="270" Margin="10,0,20,0">
                 <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <RadioButton x:Name="radForEstrangeiro" Content="Estrangeiro"/>
-                    <RadioButton x:Name="radForNacional" Content="Nacional"/>
-                    <RadioButton x:Name="radForZfm" Content="ZFM"/>
-                    <RadioButton x:Name="radProducaoPropria" Content="Produção Própria"/>
+                    <RadioButton x:Name="radForEstrangeiro" GroupName="Fornecedor" Content="Estrangeiro" Checked="radForEstrangeiro_Checked"/>
+                    <RadioButton x:Name="radForNacional" GroupName="Fornecedor" Content="Nacional" Checked="radForNacional_Checked"/>
                     <Label Content="UF :" Margin="10,5,0,0"/>
                     <ComboBox Name="cbolistaUfForn" VerticalAlignment="Center" HorizontalAlignment="Left" Width="80" Margin="10,5,0,0"
                               ItemsSource="{Binding}" DisplayMemberPath="SiglaUf" SelectedValuePath="SiglaUf" SelectedValue="SiglaUf" DropDownClosed="cbolistaUfForn_DropDownClosed" />
@@ -53,19 +54,20 @@
                         <ColumnDefinition Width="60"/>
                     </Grid.ColumnDefinitions>
 
-                    <RadioButton Grid.Row="0" Grid.Column="0" x:Name="radProdEstrangeiro" Content="Estrangeiro" Margin="10,5,0,0"/>
-                    <RadioButton Grid.Row="1" Grid.Column="0" x:Name="radProdNacional" Content="Nacional" Margin="10,5,0,0"/>
+                    <RadioButton Grid.Row="0" Grid.Column="0" x:Name="radProdEstrangeiro" Content="Estrangeiro" Margin="10,5,0,0" Checked="radProdEstrangeiro_Checked"/>
+                    <RadioButton Grid.Row="1" Grid.Column="0" x:Name="radProdNacional" Content="Nacional" Margin="10,5,0,0" Checked="radProdNacional_Checked"/>
 
                     <Label Grid.Row="3" Grid.Column="0" Content="Tipo Especial" Margin="10,5,0,5"/>
                     <Line Grid.Row="4" Grid.Column="0" Stroke="DarkBlue" StrokeThickness="2" X1="0" X2="130"/>
-                    <CheckBox Grid.Row="4" Grid.Column="0" x:Name="chkMotores" Content="Motores" Margin="10,5,0,0"/>
-                    <CheckBox Grid.Row="5" Grid.Column="0" x:Name="chkPecas" Content="Peças" Margin="10,5,0,0"/>
+                    <CheckBox Grid.Row="4" Grid.Column="0" x:Name="chkMotores" Content="Motores" Margin="10,5,0,0" Checked="chkMotores_Checked"/>
+                    <CheckBox Grid.Row="5" Grid.Column="0" x:Name="chkPecas" Content="Peças" Margin="10,5,0,0" Checked="chkPecas_Checked"/>
+                    <CheckBox Grid.Row="6" Grid.Column="0" x:Name="chkPpb" Content="PPB" Margin="10,5,0,0" Checked="chkPecas_Checked"/>
 
                     <Label Grid.Row="3" Grid.Column="1" Content="Situação Especial" Margin="10,5,0,5"/>
                     <Line Grid.Row="4" Grid.Column="1" Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="200"/>
                     <CheckBox Grid.Row="4" Grid.Column="1" Name="chkItensFcp" Content="Item com FCP" Margin="10,5,0,0"/>
-                    <CheckBox Grid.Row="5" Grid.Column="1" Name="chkCorredor" Content="Corredor de Importação" Margin="10,5,0,0"/>
-                    <CheckBox Grid.Row="6" Grid.Column="1" Name="chkImportadoZfm" Content="Importado para ZFM" Margin="10,5,0,0"/>
+                    <CheckBox Grid.Row="5" Grid.Column="1" Name="chkCorredor" Content="Corredor de Importação" Margin="10,5,0,0" Checked="chkCorredor_Checked"/>
+                    <CheckBox Grid.Row="6" Grid.Column="1" Name="chkImportadoZfm" Content="Importado para ZFM" Margin="10,5,0,0" Checked="chkImportadoZfm_Checked"/>
 
                     <Label Grid.Row="0" Grid.Column="1" Content="NCM" VerticalAlignment="Center"/>
                     <TextBox Grid.Row="1" Grid.Column="1" Name="txtNcm" Text="{Binding CodNcm}" BorderThickness="2" Margin="0,0,10,0" />
@@ -97,9 +99,9 @@
                     <ComboBox Grid.Row="0" Grid.Column="1" Name="cbolistaUf" VerticalAlignment="Center" Width="80" Grid.ColumnSpan="1"
                               ItemsSource="{Binding}" DisplayMemberPath="SiglaUf" SelectedValuePath="SiglaUf" SelectedValue="SiglaUf" />
                     <CheckBox Grid.Row="0" Grid.Column="2" Name="chkClienteZfm" Content="Venda na ZFM" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                    <RadioButton Grid.Row="1" Grid.Column="0"  Name="radPessoaJurídica" Content="Pessoa Jurídica" IsChecked="False" VerticalAlignment="Center" Margin="10,0,0,0" Grid.ColumnSpan="2"/>
-                    <RadioButton Grid.Row="1" Grid.Column="2" Name="radPessoaFisica" Content="Pessoa Física" IsChecked="True" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                    <RadioButton Grid.Row="1" Grid.Column="3" Name="radEstrangeiro" Content="Estrangeiro" IsChecked="True" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="0"  Name="radPessoaJurídica" Content="Pessoa Jurídica" VerticalAlignment="Center" Margin="10,0,0,0" Grid.ColumnSpan="2"/>
+                    <RadioButton Grid.Row="1" Grid.Column="2" Name="radPessoaFisica" Content="Pessoa Física" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="3" Name="radEstrangeiro" Content="Estrangeiro" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radEstrangeiro_Checked"/>
                     <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Name="chkContribuinte" Content="PJ Não Contribuinte / Órgão Público" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0" />
                     <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Content="Items com FCP na UF selecioanda" VerticalAlignment="Center" Margin="10,0,0,0"/>
                     <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Name="txtItemsFcp" BorderThickness="2" Margin="10,5,0,0" TextAlignment="Left"
@@ -154,7 +156,7 @@
                     <Label Grid.Row="6" Grid.Column="0" Content="(+) Cofins Importação"  VerticalAlignment="Center"/>
                     <Label Grid.Row="7" Grid.Column="0" Content="(+) Capatazia"  VerticalAlignment="Center"/>
                     <Label Grid.Row="8" Grid.Column="0" Content="(+) Contr FTI"  VerticalAlignment="Center"/>
-                    <Label Grid.Row="9" Grid.Column="0" Content="(+) Contr UEA"  VerticalAlignment="Center"/>
+                    <Label Grid.Row="9" Grid.Column="0" Content="(+) IOF Cartão"  VerticalAlignment="Center"/>
                     <Label Grid.Row="10" Grid.Column="0" Content="(+) II Suspenso"  VerticalAlignment="Center"/>
                     <Label Grid.Row="11" Grid.Column="0" Content="(+) IPI Suspenso"  VerticalAlignment="Center"/>
                     <Line  Grid.Row="12" Grid.Column="3" Stroke="DarkBlue" StrokeThickness="3" X1="0" X2="150"/>
@@ -174,9 +176,10 @@
                              LostFocus="txtValorNF_LostFocus" TextChanged="txtValorNF_TextChanged"/>
                     <TextBox Grid.Row="1" Grid.Column="3" Name="txtIcms"  VerticalAlignment="Center" Margin="5,0">
                         <TextBox.Text>
-                            <MultiBinding Converter="{StaticResource MyMultiplyConverter}" ConverterParameter='n2'>
+                            <MultiBinding Converter="{StaticResource myIcmsConverter}" ConverterParameter='n2'>
                                 <Binding Path="Text" ElementName="txtValorNF"/>
                                 <Binding Path="Text" ElementName="txtPercentIcms"/>
+                                <Binding Path="IsChecked" ElementName="chkPpb"/>
                             </MultiBinding>
                         </TextBox.Text>
                     </TextBox>
@@ -247,34 +250,81 @@
                             </MultiBinding>
                         </TextBox.Text>
                     </TextBox>
-                    <TextBox Grid.Row="1" Grid.Column="1" Name="txtPercentIcms"  VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding ElementName=cbolistaUfForn, Path=SelectedItem.AliquotaInterna, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" PreviewTextInput="NumberValidationTextBox"/>
-                    <TextBox Grid.Row="5" Grid.Column="1" Name="txtPercentPis"  VerticalAlignment="Center" Margin="5,0" TextAlignment="Right">
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="txtPercentIcms"  VerticalAlignment="Center" Margin="5,0" PreviewTextInput="NumberValidationTextBox">
                         <TextBox.Style>
                             <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-                                <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=Default.Pis, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
+                                <Setter Property="Text" Value="{Binding ElementName=cbolistaUfForn, Path=SelectedItem.AliquotaInterestadual, 
+                                    Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
+                                <Setter Property="IsEnabled" Value="False"/>
                                 <Style.Triggers>
-                                    <DataTrigger Binding="{Binding IsChecked, ElementName=radForNacional}" Value="True">
-                                        <Setter Property="Text" Value="0,00"/>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkMicroempresa}" Value="True">
+                                        <Setter Property="IsEnabled" Value="True"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
+                        
+                    </TextBox>
+                    <TextBox Grid.Row="5" Grid.Column="1" Name="txtPercentPis"  VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
+                        <TextBox.Text>
+                            <MultiBinding Converter="{StaticResource myPisConverter}" ConverterParameter='n2'>
+                                <Binding Path="IsChecked"  ElementName="radForEstrangeiro"/>
+                                <Binding Path="IsChecked" ElementName="chkPecas"/>
+                            </MultiBinding>
+                        </TextBox.Text>
+                    </TextBox>
+
+                    <TextBox Grid.Row="6" Grid.Column="1" Name="txtPercentCofins" VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
+                        <TextBox.Text>
+                            <MultiBinding Converter="{StaticResource myCofinsConverter}" ConverterParameter='n2'>
+                                <Binding Path="IsChecked"  ElementName="radForEstrangeiro"/>
+                                <Binding Path="IsChecked" ElementName="chkPecas"/>
+                            </MultiBinding>
+                        </TextBox.Text>
+                    </TextBox>
+
+                    <TextBox Grid.Row="7" Grid.Column="1" Name="txtPercentCapatazia"  VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                                <Setter Property="Text" Value="0,00"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=radForEstrangeiro}" Value="True">
+                                        <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=Default.Capatazia, 
+                                                Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
                         </TextBox.Style>
                     </TextBox>
-                        
-                    
-                    
-                    
-                    
-                    <!--Text="{Binding Source={StaticResource Settings}, Path=Default.Pis, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" />-->
-                    <TextBox Grid.Row="6" Grid.Column="1" Name="txtPercentCofins" VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding Source={StaticResource Settings}, Path=Default.Cofins, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" />
-                    <TextBox Grid.Row="7" Grid.Column="1" Name="txtPercentCapatazia"  VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding Source={StaticResource Settings}, Path=Default.Capatazia, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" />
-                    <TextBox Grid.Row="8" Grid.Column="1" Name="txtPercentFti"  VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding Source={StaticResource Settings}, Path=Default.Fti, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" />
-                    <TextBox Grid.Row="9" Grid.Column="1" Name="txtPercentUea"  VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding Source={StaticResource Settings}, Path=Default.Uea, Mode=OneWay, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" />
+
+                    <TextBox Grid.Row="8" Grid.Column="1" Name="txtPercentFti"  VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                                <Setter Property="Text" Value="0,00"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=radForEstrangeiro}" Value="True">
+                                        <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=Default.Fti, 
+                                                Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
+                    </TextBox>
+
+                    <TextBox Grid.Row="9" Grid.Column="1" Name="txtPercentIof"  VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                                <Setter Property="Text" Value="0,00"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=radForEstrangeiro}" Value="True">
+                                        <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=Default.Iof, 
+                                                Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
+                    </TextBox>
+                             
                     <TextBox Grid.Row="10" Grid.Column="1" Name="txtPercentIiSuspenso"  VerticalAlignment="Center" Margin="5,0"
                              Text="0,00"/>
                     <TextBox Grid.Row="11" Grid.Column="1" Name="txtPercentIpiSuspenso"  VerticalAlignment="Center" Margin="5,0"
